fix squished theme hovercards on the homepage (bug 881391)

--- a/media/css/impala/hovercards.less
+++ b/media/css/impala/hovercards.less
@@ -406,3 +406,7 @@
 .hovercard .install-shell .d2c-reasons-help {
     display: none;
 }
+
+#homepage #featured-themes .hovercard.persona-preview {
+    width: auto;
+}
